@@ -22,7 +22,6 @@ package fr.centralesupelec.edf.riseclipse.iec61850.scl.impl;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.notify.Notification;
 import org.eclipse.emf.common.notify.NotificationChain;
@@ -49,6 +48,7 @@ import fr.centralesupelec.edf.riseclipse.iec61850.scl.LN;
 import fr.centralesupelec.edf.riseclipse.iec61850.scl.LN0;
 import fr.centralesupelec.edf.riseclipse.iec61850.scl.SclPackage;
 import fr.centralesupelec.edf.riseclipse.iec61850.scl.Server;
+import fr.centralesupelec.edf.riseclipse.iec61850.scl.Val;
 import fr.centralesupelec.edf.riseclipse.util.IRiseClipseConsole;
 
 /**
@@ -846,7 +846,7 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
                 .getDOI()
                 .stream()
                 .filter( doi -> "NamPlt".equals( doi.getName() ) )
-                .collect( Collectors.toList() );
+                .toList() ;
         if( namPltDoi.size() == 1 ) {
             List< DAI > ldNsDai =
                      namPltDoi
@@ -854,14 +854,13 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
                     .getDAI()
                     .stream()
                     .filter( dai -> "ldNs".equals( dai.getName() ) )
-                    .collect( Collectors.toList() );
-            if( ldNsDai.size() == 1 ) {
-                if( (      ldNsDai.get( 0 ).getVal().size() == 1 )
-                 && (      ldNsDai.get( 0 ).getVal().get( 0 ).getValue() != null )
-                 && (      ldNsDai.get( 0 ).getVal().get( 0 ).getValue().length() != 0 ) ) {
+                    .toList();
+            if( ldNsDai.size() == 1 && ( ldNsDai.get( 0 ).getVal().size() == 1 )
+                                    && ( ldNsDai.get( 0 ).getVal().get( 0 ).getValue() != null )
+                                    && ( ldNsDai.get( 0 ).getVal().get( 0 ).getValue().length() != 0 ) ) {
                     return ldNsDai.get( 0 ).getVal().get( 0 ).getValue();
                 }
-            }
+            
         }
 
         if( getLN0().getRefersToLNodeType() == null ) return null;
@@ -871,7 +870,7 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
                 .getDO()
                 .stream()
                 .filter( do_ -> "NamPlt".equals( do_.getName() ) )
-                .collect( Collectors.toList() );
+                .toList();
         if( namPltDo.size() == 1 ) {
             if( namPltDo.get( 0 ).getRefersToDOType() == null ) return null;
             List< DA > ldNsDa =
@@ -880,15 +879,14 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
                     .getRefersToDOType()
                     .getDA()
                     .stream()
-                    .filter( da -> "ldNs".equals( da.getName() ) )
-                    .collect( Collectors.toList() );
-            if( ldNsDa.size() == 1 ) {
-                if((       ldNsDa.get( 0 ).getVal().size() == 1 )
-                      && ( ldNsDa.get( 0 ).getVal().get( 0 ).getValue() != null )
-                      && ( ldNsDa.get( 0 ).getVal().get( 0 ).getValue().length() != 0 ) ) {
+                    .filter( da -> "ldNs".equals( da.getName() ))
+                    .toList();
+            if( ldNsDa.size() == 1 && ( ldNsDa.get( 0 ).getVal().size() == 1 )
+                                   && ( ldNsDa.get( 0 ).getVal().get( 0 ).getValue() != null )
+                                   && ( ldNsDa.get( 0 ).getVal().get( 0 ).getValue().length() != 0 )) {
                     return ldNsDa.get( 0 ).getVal().get( 0 ).getValue();
                 }
-            }
+            
         }
 
         return null;
@@ -1319,7 +1317,7 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
                 .getDOI()
                 .stream()
                 .filter( doi -> "GrRef".equals(  doi.getName() ))
-                .collect( Collectors.toList() );
+                .toList();
 
         if( grRef.size() > 1 ) {
             console.warning( EXPLICIT_LINK_CATEGORY, getFilename(), getLineNumber(),
@@ -1327,21 +1325,22 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
             return;            
         }
 
-        if( grRef.size() == 0 ) {
+        if( grRef.isEmpty() ) {
             console.debug( EXPLICIT_LINK_CATEGORY, getFilename(), getLineNumber(),
                           "LDevice ", getInst(), " is a root LDevice" );
             return;            
         }
         // Look for DAI name="setSrcRef" in GrRef
+        // When we try to get 
         List< DAI > setSrcRef =
                  grRef
                 .get( 0 )
                 .getDAI()
                 .stream()
                 .filter( dai -> "setSrcRef".equals( dai.getName() ))
-                .collect( Collectors.toList() );
+                .toList();
         
-        if( setSrcRef.size() == 0 ) {
+        if( setSrcRef.isEmpty() ) {
             console.warning( EXPLICIT_LINK_CATEGORY, getFilename(), getLineNumber(),
                              messagePrefix, "found no DAI named setSrcRef in GrRef on line ", grRef.get( 0 ).getLineNumber() );
             return;            
@@ -1352,18 +1351,28 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
             return;            
         }
         
-        if( setSrcRef.get( 0 ).getVal().size() == 0 ) {
+        EList< Val > val = setSrcRef.get( 0 ).getVal();
+        if( val.isEmpty() ) {
+            // We look for Val in DataTypeTemplates
+            // Therefore, the link from DAI to DA must exist
+            getLN0().buildExplicitLinks( console, false );
+            if( setSrcRef.get( 0 ).getRefersToAbstractDataAttribute() != null ) {
+                val = setSrcRef.get( 0 ).getRefersToAbstractDataAttribute().getVal();
+            }
+        }
+        
+        if( val.isEmpty() ) {
             console.warning( EXPLICIT_LINK_CATEGORY, getFilename(), getLineNumber(),
                              messagePrefix, "found no Val in setSrcRef on line ", setSrcRef.get( 0 ).getLineNumber() );
-            return;            
+            return;
         }
-        if( setSrcRef.get( 0 ).getVal().size() > 1 ) {
+        if( val.size() > 1 ) {
             console.warning( EXPLICIT_LINK_CATEGORY, getFilename(), getLineNumber(),
                              messagePrefix, "found several Val in setSrcRef on line ", setSrcRef.get( 0 ).getLineNumber() );
             return;            
         }
         
-        String higherLevelLDeviceName = setSrcRef.get( 0 ).getVal().get( 0 ).getValue();
+        String higherLevelLDeviceName = val.get( 0 ).getValue();;
         if(( higherLevelLDeviceName == null ) || ( higherLevelLDeviceName.length() <= 1 )) {
             console.warning( EXPLICIT_LINK_CATEGORY, getFilename(), getLineNumber(),
                              messagePrefix, "found no Val or empty Val in setSrcRef on line ", setSrcRef.get( 0 ).getLineNumber() );
@@ -1388,9 +1397,9 @@ public class LDeviceImpl extends UnNamingImpl implements LDevice {
                 .getLDevice()
                 .stream()
                 .filter( ld -> temp.equals( ld.getInst() ))
-                .collect( Collectors.toList() );
+                .toList();
         
-        if( lDevices.size() == 0 ) {
+        if( lDevices.isEmpty() ) {
             console.warning( EXPLICIT_LINK_CATEGORY, getFilename(), getLineNumber(),
                              messagePrefix, "found no LDevice named ", higherLevelLDeviceName );
             return;            
